Fixes for Firefox, Dark Mode and Google

--- a/cultpodcasts/src/app/home/home.component.sass
+++ b/cultpodcasts/src/app/home/home.component.sass
@@ -13,9 +13,8 @@
     a:hover
         text-decoration: none
 a[mat-icon-button]
-    zoom: 1.2
     margin-right: 10px
-    -moz-transform: scale(1.2)
+    transform: scale(1.2)
 #thisweek
     h2
         margin: 0 8px 0 8px
